--- a/Project 4 - Sorting/Project 4 - Sorting.vcxproj.filters
+++ b/Project 4 - Sorting/Project 4 - Sorting.vcxproj.filters
@@ -18,13 +18,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sortingAlgorithms.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="sortingAlgorithms.h">
+    <ClCompile Include="sortingAlgorithms.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
+    </ClCompile>
   </ItemGroup>
 </Project>
